--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -85,6 +85,9 @@ dataSources:
       tos_app: {password: 't0$NBA(T0sApp)'}
       tos_omis_log: {password: 't0$NBA(0misL0g)'}
       tos_report: {password: 't0$NBA(Rep0rt)'}
+      tos_fm: {password: 'tos_fm'}
+      fmt: {password: 'ToddHeap(86)'}
+      ftw: {password: 'FredDavis(86)'}
 
 # Datasource Sets.
 #
@@ -105,7 +108,6 @@ dsFiles:
     portal-itss_codb: {jndi_name: itss_codb, database: codb, account: itss}
     portal-TOS_REPORT: {jndi_name: TOS_REPORT, database: omis, account: tos_report}
   tos:
-    portal-codb: {jndi_name: codb, database: codb, account: lportal}}
     tos-clin_omis: {jndi_name: CLIN_OMIS, database: omis, account: tos_fm}
     tos-tos_app: {jndi_name: TOS_APP, database: omis, account: tos_app}
     tos-fmt: {jndi_name: FMT, database: omis, account: fmt}
@@ -115,7 +117,7 @@ dsFiles:
     tos-omis_log: {jndi_name: omis_log, database: omis, account: tos_omis_log}
     tos-omis_performance: {jndi_name: OMIS_PERFORMANCE, database: omis, account: omis}
     tos-portfolio_codb: {jndi_name: PORTFOLIO_CODB, database: omis, account: lportal}
-    tos-aasba_codb: {jndi_name: AASBS_CODB, database: codb, account: itss
+    tos-aasba_codb: {jndi_name: AASBS_CODB, database: codb, account: itss}
   brms_assist:
     brms_assist-ds: {jndi_name: Brms_AssistDS, database: codb, account: assist}
     brms_assist-itss: {jndi_name: itssDS, database: codb, account: itss}
